jpa springboot 이론설명,마지막정리